link fixed and deployed

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="/dist/output.css" rel="stylesheet">
-  <title>React App</title>
+  <title>GPT-3 U1</title>
 </head>
 
 <body>
